tests/parser/tests/cases/should_fail/malformed_function_literal_arrow/case.stderr
error: unexpectedly encountered a `=`
 --> $DIR/case.hash:1:36
1 |   str_eq: (str, str) -> str = (a, b) = a == b;
  |                                      ^ here
  = help: consider adding a `;`
